tests/unit/commands/follow/snapshots/sara__commands__follow__tests__styled_snapshot_follow_mission_retro.snap
---
source: tests/unit/commands/follow/tests.rs
expression: out
---
 sara  ▸ follow · mission control             all projects · 1 live · 1 stalled
▸  LIVE  26  task 26                                                  sara · 30s
    ●●◆○ 2/4  step 3
    ▸ writing tests

   STALLED  3  task 3                                                pling · 20m
    ●◆○ 1/3  step 2




↑↓ select  ⏎ follow  m minimal  q quit
--- styles ---
aaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbcccccccccccccdddddddddddddddeeeeeeffffffffffffc
bbggggggcbbccaaaaaaaccccccccccccccccccccccccccccccccccccccccccccccccccdddddddddd
cccceebdddddcccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cchhhhhhhhhcfccccccccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddd
ccccebdddddccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbdddddddddbdddddddddbddddddddddbdddddcccccccccccccccccccccccccccccccccccccccccc
--- legend ---
a fg=Some(Rgb(6, 16, 12)) bg=Some(Rgb(70, 245, 195)) mod=BOLD
b fg=Some(Rgb(70, 245, 195)) bg=Some(Reset) mod=BOLD
c fg=Some(Reset) bg=Some(Reset) mod=NONE
d fg=Some(Rgb(62, 112, 88)) bg=Some(Reset) mod=NONE
e fg=Some(Rgb(95, 230, 115)) bg=Some(Reset) mod=NONE
f fg=Some(Rgb(255, 190, 70)) bg=Some(Reset) mod=NONE
g fg=Some(Rgb(6, 16, 12)) bg=Some(Rgb(95, 230, 115)) mod=BOLD
h fg=Some(Rgb(6, 16, 12)) bg=Some(Rgb(255, 190, 70)) mod=BOLD
