tests/unit/commands/follow/snapshots/sara__commands__follow__tests__styled_snapshot_follow_task.snap
---
source: tests/unit/commands/follow/tests.rs
expression: "styled(&app, 60, 16)"
---
 sara  ▸ follow · 26                              LIVE  10s
 task 26
 26 ●◆○ 1/3
 ◆ step 2
 ▸ wiring the CLI
 ── flow ──────────────────────────────────────────────────…
 10m ○ step added: step 1
  5m ● step 1
  2m » risk: lexer is lossy
  1m ≈ recalled m12
 10s ▸ wiring the CLI




esc quit  m minimal  q quit
--- styles ---
aaaaaabbbbbbbbbbbbbbcccccccccccccccccccccccccccccddddddeeeee
bbbbbbbbcccccccccccccccccccccccccccccccccccccccccccccccccccc
cbbcfbeeeeeccccccccccccccccccccccccccccccccccccccccccccccccc
bbbccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
eeeeeeeeeeeeeeeeeccccccccccccccccccccccccccccccccccccccccccc
eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
eeeeeeeeeeeeeeeeeeeeeeeeeccccccccccccccccccccccccccccccccccc
eeeeeffffffffccccccccccccccccccccccccccccccccccccccccccccccc
eeeeeccccccccccccccccccccccccccccccccccccccccccccccccccccccc
eeeeeccccccccccccccccccccccccccccccccccccccccccccccccccccccc
eeeeebbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbbeeeeeeebeeeeeeeeeebeeeeeccccccccccccccccccccccccccccccccc
--- legend ---
a fg=Some(Black) bg=Some(Cyan) mod=BOLD
b fg=Some(Cyan) bg=Some(Reset) mod=BOLD
c fg=Some(Reset) bg=Some(Reset) mod=NONE
d fg=Some(Black) bg=Some(Green) mod=BOLD
e fg=Some(DarkGray) bg=Some(Reset) mod=NONE
f fg=Some(Green) bg=Some(Reset) mod=NONE
